about.css
body {
    padding: 0px;
    margin: 0px;
    font-family: Poppins;
 }
 
 /* headings */
 h2 {
     color: #e63946;
 }

/* skip to main content */
#skip-nav {
    background-color: #1D3557;
    padding-left: 30px;
}

#skip-nav a {
    color: #f1faee;
    text-decoration: none;
    border-bottom: 1px solid;
}

/* nav bar */
.container {
    background-color: #1D3557;
    display: grid;
    grid-template-columns: 1fr;
    font-size: 20px;
    top: 0px;
}

.nav-wrapper {
    display: flex;
    justify-content: space-between;
    padding: 10px;
}

.right-side {
    display: flex;
    margin-top: auto;
    margin-bottom: auto;
    margin-right: 50px;
}

.nav-wrapper > .right-side > div {
    margin-left: 50px;
}

.nav-link-wrapper a {
    color: #f1faee;
    text-decoration: none;
}

.nav-link-wrapper a:hover {
    border-bottom: 2px solid transparent;
    transition: border-bottom 20s;
    text-align: center;
    color: #A8DADC;
    height: 20px;
}

#nav-title {
    color: #f1faee !important;
}

#website-title {
    color: #f1faee !important;
}

/* font-size buttons */

.continer {
    text-align: center;
}

.buttons {
    display: flex;
    height: 75px;
    width: 500px;
    margin: auto;
}

@media only screen and (max-width: 600px) {
    .buttons {
      width: 300px;
    }
  }

/* mobile adaptation */
img {
    width: auto ;
    max-width: 100% ;
    height: auto ;
  }

.continer .buttons .btn {
    display: inline-flex;
    background: #1D3557;
    color: #A8DADC;
    width: 100%;
    height: 100%;
    justify-content: center;
    align-items: center;
    margin-left: auto;
    margin-right: auto;
}

.continer .buttons .btn .active{
    background: #457B9D;
}

.continer .buttons .btn:nth-child(2) {
    font-size: 1.5em;
}

.continer .buttons .btn:nth-child(3) {
    font-size: 2em;
}

.continer .content {
    font-size: 1em;
}

.continer .content p {
    transition: 0.5s;
}

/* text styling */
h2 {
    text-align: center;
}

p {
    padding-left: 20px;
    padding-right: 20px;
    color: #457B9D;
    text-align: center;
}

p > a {
    color: #1D3557;
}

/* image */
img {
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: 40%;
    padding-bottom: 30px;
}

